# OuroborosEngine

./: .gitignore  .gitmodules  1.yaml  123.yaml  README.MD  README.md  alu_test.yaml  aluminium_test.yaml  test  test.yaml
Engine/ImGui/: CMakeLists.txt
Engine/ImGui/include/imgui/: imgui.h
Engine/ImGui/src/: ImGuizmo.cpp
Engine/ImGuizmo/ImGui/: CMakeLists.txt
Engine/ImGuizmo/ImGui/include/imgui/backends/: imgui_impl_vulkan.h
Engine/ImGuizmo/ImGuizmo/: CMakeLists.txt
Engine/OuroborosEngine/: 123.yaml  CMakeLists.txt  SCENE.yaml  Sponza.yaml  build.bat  copy.bat  final.yaml  imgui.ini  t.yaml  test.yaml  test2.yaml
Engine/OuroborosEngine/OuroborosRenderer/: CMakeLists.txt
Engine/OuroborosEngine/OuroborosRenderer/ImGuizmo/ImGui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ImGui.sln  ImGui.vcxproj  ImGui.vcxproj.filters  cmake_install.cmake
Engine/OuroborosEngine/OuroborosRenderer/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
Engine/OuroborosEngine/OuroborosRenderer/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
Engine/OuroborosEngine/OuroborosRenderer/include/: Context.h  Window.h  camera.h  imgui_manager.h  material.h  material_manager.h  mesh.h  mesh_manager.h  shader.h  texture.h  texture_manager.h
Engine/OuroborosEngine/OuroborosRenderer/include/vulkan/: spirv_helper.h  vulkan_buffer.h  vulkan_context.h  vulkan_image.h  vulkan_imgui_manager.h  vulkan_initializers.h  vulkan_material.h  vulkan_mesh.h  vulkan_pipeline.h  vulkan_shader.h  vulkan_texture_manager.h  vulkan_type.inl
Engine/OuroborosEngine/OuroborosRenderer/src/graphics/: Context.cpp  Window.cpp  camera.cpp  material_manager.cpp  mesh.cpp  mesh_manager.cpp  shader_manager.cpp
Engine/OuroborosEngine/OuroborosRenderer/src/graphics/opengl/: opengl_imgui_manager.cpp
Engine/OuroborosEngine/OuroborosRenderer/src/graphics/vulkan/: vulkan_buffer.cpp  vulkan_context.cpp  vulkan_descriptor_set.cpp  vulkan_image.cpp  vulkan_imgui_manager.cpp  vulkan_initializers.cpp  vulkan_material_manager.cpp  vulkan_mesh.cpp  vulkan_pipeline.cpp  vulkan_shader.cpp  vulkan_texture.cpp  vulkan_texture_manager.cpp
Engine/OuroborosEngine/OuroborosRenderer/src/graphics/vulkan/SPIRV-Reflect/: spirv_reflect.c
Engine/OuroborosEngine/images/: samplescene.yaml
Engine/OuroborosEngine/images/helmet_image/: samplescene.yaml
Engine/OuroborosEngine/model/: bulb.mtl
Engine/OuroborosEngine/scripts/: camera_control.clua  light_rotate - Copy (2).clua  light_rotate.clua  test.lua  test1 - Copy (3).slua
Engine/OuroborosEngine/shaders/: common.glsl  common_frag.glsl  common_light_pass_frag.glsl  common_vert.glsl  light_shader.frag  shader.vert  shader2.frag  shader2.vert  shader_geometrypass.frag  shader_geometrypass.vert  shader_lightpass.frag  shader_shadowpass.geom  shader_shadowpass.vert  ssr_shader.frag
Engine/OuroborosEngine/src/: main.cpp
Engine/OuroborosEngine/src/asset/: ModelLoader.cpp  ModelLoader.h  image_asset_manager.cpp  image_asset_manager.h  master_asset_manager.h  material_asset_manager.cpp  material_asset_manager.h  mesh_asset_manager.cpp  mesh_asset_manager.h  script_asset_manager.cpp  script_asset_manager.h  shader_asset_manager.cpp  shader_asset_manager.h
Engine/OuroborosEngine/src/core/: engine.cpp  engine.h  engine_settings.h
Engine/OuroborosEngine/src/core/ecs/: component_manager.h  components.cpp  ecs_base.h  ecs_definitions.h  entity_mananger.h  hierarchy.cpp  hierarchy.h  system.h  system_manager.h
Engine/OuroborosEngine/src/gui/: GUI_manager.cpp  GUI_manager.h  asset_browser.cpp  asset_browser.h  asset_draw.h  base.cpp  base.h  components_draw.h  entities_info.cpp  entities_info.h  file_browser.cpp  file_browser.h  gizmo_editor.cpp  gizmo_editor.h  gui_definitions.h  material_configure.cpp  material_configure.h  sample_panel.h  slider_speed.cpp  slider_speed.h  system_configure.cpp  system_configure.h  viewport.cpp  viewport.h  wrapped_functions.h
Engine/OuroborosEngine/src/input/: InputManager.cpp  InputManager.h
Engine/OuroborosEngine/src/scripting/: lua_script_manager.cpp  lua_script_manager.h  script.h
Engine/OuroborosEngine/src/serializing/: assets_deserialization_impl.inl  assets_serialization_impl.inl  component_deserialization_impl.inl  component_serialization_impl.inl  scene_serializer.cpp  shared_serialization_impl.h
Engine/shared/common/: assets.h  components.h  shared.h
OuroborosEngine/: 1.yaml  2.yaml  OuroborosEngine.sln  OuroborosEngine.vcxproj  OuroborosEngine.vcxproj.filters  ecs_base.h  engine.h  imgui.ini  main.cpp  ook - Copy.yaml  ook.yaml  samplescene.yaml  scene.yaml  sex.yaml  test.yaml
OuroborosEngine/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
OuroborosEngine/OuroborosRenderer/: OuroborosRenderer.vcxproj  OuroborosRenderer.vcxproj.filters  mesh.cpp  mesh.h  vulkan_context.cpp  vulkan_type.inl
OuroborosEngine/OuroborosRenderer/Graphics/: Context.cpp  Context.h  ImguiManager.h  MaterialComponent.h  Window.cpp  Window.h  buffer.cpp  buffer.h  buffer_data_type.h  camera.cpp  camera.h  imgui_manager.cpp  imgui_manager.h  material.h  material_manager.cpp  material_manager.h  mesh.cpp  mesh.h  mesh_manager.cpp  (+7 more)
OuroborosEngine/common/: asset_imgui_impl.inl  assets.h  shared.h
OuroborosEngine/scripts/: BoolWrapperImpl.slua  componenttest.clua  light_rotate - Copy.clua  light_rotate.clua  self_rotate.clua  test.lua
OuroborosEngine/shaders/: common_frag.glsl  common_light_pass_frag.glsl  common_vert.glsl  compile.bat  geometry_pass_shader.frag  geometry_pass_shader.vert  light_shader.frag  light_shader.vert  shader.frag  shader.vert  shader2.frag  shader2.vert  shader_geometrypass.frag  shader_geometrypass.vert  shader_lightpass.frag  shader_lightpass.vert  ssr_shader.frag  ssr_shader.vert
OuroborosEngine/src/: engine.h  main.cpp
(+104 files in other folders)
